Fixed overflow issue in text box

--- a/static/style.css
+++ b/static/style.css
@@ -12,7 +12,9 @@ a:hover {
 body {
     background-color: #eaeaea;
 }
-
+br {
+    word-wrap: break-word;
+}
 button, input[type="submit"] {
     border-style: solid;
     border-color: #0000FF;
@@ -56,6 +58,8 @@ pre {
     font-family: Arial;
     font-size: 16px;
     color: #000;
+    word-wrap: break-word;
+    width: 100px;
 }
 
 textarea {
@@ -151,6 +155,17 @@ textarea:hover {
     margin-top: 70px;
 }
 
+#message{
+    width: 100px;
+    word-wrap: break-word;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+#text{
+    width: 100px;
+    word-wrap: break-word;
+}
 .logo {
     display: flex;
     align-items: center;
@@ -191,6 +206,7 @@ textarea:hover {
     font-size: 16px;
     padding: 10px;
     padding-top: 0px;
+    word-wrap: break-word;
 }
 
 .post:hover {
@@ -216,6 +232,7 @@ textarea:hover {
     font-weight: bold;
     padding: 20px;
     gap: 20px;
+    word-wrap: break-word;
 }
 
 .sidebar {
